--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
-== README
+== Recipies FInder
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app allows you to search for favourite recipie
+The app uses the [food2fork API](http://food2fork.com/about/api).
 
-Things you may want to cover:
+User Story
+---
 
-* Ruby version
+* If I go to root url I will get a set of default recipies
 
-* System dependencies
+* I can view a thumbnails images of all the recipies found
 
-* Configuration
+* I can search for a recipie using query params ( ?search=myrecipie )
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* I can view the social rank of a recipie
